--- a/src/pages/settings/profile/index.css
+++ b/src/pages/settings/profile/index.css
@@ -3,15 +3,31 @@
 @tailwind utilities;
 
 .field-name{
-  @apply  p-3 rounded-md text-xl font-bold mt-5 text-indigo-900;
+  @apply  rounded-md text-lg md:text-xl font-medium text-indigo-900;
 }
 .field-name::after{
-  content: ":"
+  content: ""
+}
+@media (min-width: 768px) {
+  .field-name::after{
+    content: ":"
+  }
 }
 .no-after::after{
   content: ""
 
 }
 .field-value{
-  @apply bg-indigo-100 p-3 rounded-md md:mt-5;
+  @apply bg-indigo-100 p-3 rounded-md mb-4 sm:mb-0;
+}
+h1{
+  @apply font-bold text-2xl md:text-3xl text-indigo-950 capitalize;
+}
+
+.field-link-name{
+  @apply pl-3 rounded-md text-xl font-medium text-indigo-900;
+}
+.field-link-value{
+  @apply p-3 rounded-md border-2 flex flex-row flex-wrap items-center gap-4 mb-4 sm:mb-0;
+  
 }
