--- a/src/pages/settings/profile/index.css
+++ b/src/pages/settings/profile/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .field-name {
-  @apply rounded-md text-lg md:text-xl font-medium text-indigo-900;
+  @apply rounded-md text-lg md:text-xl font-medium text-yellow-900;
 }
 .field-name::after {
   content: '';
@@ -17,14 +17,14 @@
   content: '';
 }
 .field-value {
-  @apply bg-indigo-100 p-3 rounded-md mb-4 sm:mb-0;
+  @apply bg-yellow-100 p-3 rounded-md mb-4 sm:mb-0;
 }
 h1 {
-  @apply font-bold text-2xl md:text-3xl text-indigo-950 capitalize;
+  @apply font-bold text-2xl md:text-3xl text-yellow-950 capitalize;
 }
 
 .field-link-name {
-  @apply pl-3 rounded-md text-xl font-medium text-indigo-900;
+  @apply pl-3 rounded-md text-xl font-medium text-yellow-900;
 }
 .field-link-value {
   @apply p-3 rounded-md border-2 flex flex-row flex-wrap items-center gap-4 mb-4 sm:mb-0;
